# cloudformation-cli

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pylintrc  .travis.yml  CONTRIBUTING.md  MANIFEST.in  NOTICE  README.md  README.rst  buildspec.yml  cloudformation-2010-05-15.normal.json  handler_client.py  json_lint  newline_lint  provider.definition.schema.v1.json  pytest-functional.ini  requirements.txt  run_lint  setup.cfg  setup.py
doc_source/: contract-tests.md  doc-history.md  glossary.md  index.md  modules-develop.md  modules-structure.md  modules.md  publish-extension-stacksets.md  publish-extension.md  resource-type-cli-generate.md  resource-type-cli-global-parameters.md  resource-type-cli-init.md  resource-type-cli-invoke.md  resource-type-cli-submit.md  resource-type-cli-test.md  resource-type-cli-validate.md  resource-type-cli.md  resource-type-develop-stabilize.md  resource-type-develop.md  resource-type-faq.md  resource-type-howtos.md  resource-type-model-false-drift.md  resource-type-model.md  resource-type-register.md  resource-type-schema.md  resource-type-setup.md  resource-type-test-contract-errors.md  resource-type-test-contract.md  resource-type-test-progressevent.md  resource-type-test.md  resource-type-walkthrough.md  resource-types.md  what-is-cloudformation-cli.md
docs/: CLOUDFORMATION_CLI.md  README.md  RESOURCE_MODELLING.md  _config.yml
examples/: aws-kinesis-stream.json  aws-kinesis-stream.yaml  java_project.json  java_project.yaml
fragments/: sample.json
internal/: setup.py
test/: tt-tt-tt.json
tests/: functional_importlib_compat.py  functional_packager.py  functional_submit.py  test_argutils.py  test_awscommon_schema_validation.py  test_boto_helpers.py  test_build_image.py  test_cli.py  test_command_commons.py  test_data_loaders.py  test_extensions.py  test_filters.py  test_generate.py  test_generate_stack_templates.py  test_init.py  test_invoke.py  test_jsonschema_normalizer.py  test_package.py  test_package_utils.py  test_package_validator.py  test_packager.py  test_plugin_base.py  test_plugin_registry.py  test_project.py  test_subcommands.py  test_submit.py  test_test.py  test_type_name_resolver.py  test_type_schema_loader.py  utils.py  (+2 more)
(+518 files in other folders)
