[bdist_wheel]
universal=1

[metadata]
license_file = LICENSE.txt
description-file = README.rst

[flake8]
exclude =
    .git,
    __pycache__,
    build,
    dist,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    .tox
max-complexity = 10
select = C,E,F,W,B

[isort]
line_length=80
indent = '    '
multi_line_output = 5
default_section = FIRSTPARTY
skip=env
