[metadata]
license_file = LICENSE
description-file = README.rst

[flake8]
exclude =
    .git,
    __pycache__,
    build,
    dist,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    .tox
max-complexity = 10
max-line-length = 80
select = C,E,F,W,B,B950
# C812, C815, W503 clash with black
ignore = E501,C812,C816,C815,W503

[isort]
line_length = 88
indent = '    '
multi_line_output = 3
default_section = FIRSTPARTY
skip = env
include_trailing_comma = true
combine_as_imports = True
force_grid_wrap = 0
known_first_party = rpdk
known_third_party = boto3,botocore,jinja2,jsonschema,werkzeug,yaml,requests

[tool:pytest]
# can't do anything about 3rd part modules, so don't spam us
filterwarnings =
    ignore::DeprecationWarning:botocore
    ignore::DeprecationWarning:werkzeug
    ignore::DeprecationWarning:yaml
